--- a/College_Picture.html
+++ b/College_Picture.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture College</title>
+    <link rel="stylesheet" href="styles/College_Picture.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>My Picture College</h1>
+    </header>
+    <main>
+        <section>
+            <div class="row">
+                <img src="images/A.jpg" alt="">
+            </div>
+
+            <div class="row">
+                <div>
+                    <img src="images/B.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/C.jpg" alt="">
+                </div>
+                <div class="vertical-college">
+                    <img src="images/D.jpg" alt="">
+                    <img src="images/E.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
