--- a/College_Picture.html
+++ b/College_Picture.html
@@ -28,6 +28,21 @@
                     <img src="images/E.jpg" alt="">
                 </div>
             </div>
+
+            <div class="row">
+                <div>
+                    <img src="images/F.jpg" alt="">
+                </div>
+                <div class="square-college">
+                    <img src="images/G.jpg" alt="">
+                    <img src="images/G.jpg" alt="">
+                    <img src="images/G.jpg" alt="">
+                    <img src="images/G.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/H.jpg" alt="">
+                </div>
+            </div>
         </section>
     </main>
 </body>
